# bevy_cobweb_ui

./: Cargo.toml
assets/examples/: sample.style.ron
examples/: sample.rs
examples/localization/: Cargo.toml
src/loading/: cobweb_asset_loader.rs  style_asset_loader.rs  style_sheet.rs  style_sheet_parsing.rs
src/localization/: ftl_bundle.rs
src/ui_bevy/ui_ext/: text.rs
