[package]
name = "localization"
version = "0.1.0"
edition = "2021"

[features]
default = ["dev"]
dev = ["bevy_cobweb_ui/dev"]

[dependencies]
#bevy = { version = "0.14", default-features = true, features = ["serialize"] }
bevy = { git = "https://github.com/bevyengine/bevy/", branch = "main", default-features = true, features = ["serialize"] }
bevy_cobweb = { version = "0.9" }
bevy_cobweb_ui = { path = "../../" }
tracing = { version = "0.1" }
